--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-release
 node_modules
 dist
 dist-ssr
+dist-electron
+release
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/launch.json 
 .idea
 .DS_Store
 *.suo
