--- a/screenCapturer/package.json
+++ b/screenCapturer/package.json
@@ -30,6 +30,8 @@
     "fastify-socket.io": "^5.0.0",
     "redis": "^4.6.12",
     "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
+    "socket.io-stream": "^0.9.1",
     "vue": "^3.3.8"
   }
 }
