--- a/screenCapturer/package.json
+++ b/screenCapturer/package.json
@@ -29,6 +29,7 @@
     "fastify": "^4.25.2",
     "fastify-socket.io": "^5.0.0",
     "redis": "^4.6.12",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "socket.io-stream": "^0.9.1",
