--- a/tempServer/package.json
+++ b/tempServer/package.json
@@ -14,6 +14,9 @@
     "express": "^4.18.2",
     "fastify": "^4.25.2",
     "fastify-socket.io": "^5.0.0",
+    "node-media-server": "^2.6.2",
+    "rtmp2": "^0.0.2",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "socket.io-stream": "^0.9.1",
