--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "vaah-share",
+  "description": "Live share app",
+  "author": "WebReinvent",
   "private": true,
   "version": "0.0.2",
   "scripts": {
@@ -16,6 +18,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@electron/packager": "^18.1.3",
     "@vitejs/plugin-vue": "^4.3.4",
     "electron": "^26.1.0",
     "electron-builder": "^24.6.4",
