--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "electron-settings": "^4.0.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
