--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "crypto": "^1.0.1",
     "electron-settings": "^4.0.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
