updated : API Base url

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 VITE_APP_ENV=production
-VITE_API_URL=http://localhost/himanshu/vaahshare-backend/public/api/
+VITE_DEV_API_URL=http://localhost/himanshu/vaahshare-backend/public/api
+VITE_PROD_API_URL=https://v7.dev.getdemo.dev/vaahbackend/develop/public/api
