--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 VITE_APP_ENV=development
-VITE_DEV_API_URL=
-VITE_PROD_API_URL=
+VITE_DEV_API_URL=http://localhost/username/api
+VITE_PROD_API_URL=https://example.com/api
